Switched external/mexopencv to my fork of the repository.
This way, we have more control over the fixes that need to be
applied in order to make the code compile with development version
of OpenCV...

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/mexopencv"]
 	path = external/mexopencv
-	url = https://github.com/kyamagu/mexopencv.git
+	url = https://github.com/rokm/mexopencv.git
 [submodule "external/opencv"]
 	path = external/opencv
 	url = https://github.com/rokm/opencv
