Added LIFT keypoint detector and descriptor.
Matlab classes provide wrappers for python programs provided by
original code (which is imported as submodule).

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/opencv_contrib"]
 	path = external/opencv_contrib
 	url = https://github.com/rokm/opencv_contrib
+[submodule "external/lift"]
+	path = external/lift
+	url = https://github.com/cvlab-epfl/LIFT/
