LIFT keypoint detector: implemented settable max_keypoints limit
Switched the LIFT repository to personal fork, which contains the
patch necesssary for running detector without keypoint number
limit.

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/rokm/opencv_contrib
 [submodule "external/lift"]
 	path = external/lift
-	url = https://github.com/cvlab-epfl/LIFT/
+	url = https://github.com/rokm/LIFT/
