External: imported tfeat
Mainly for the Caffe model file (the server which contained the
Torch7 models has apparently become unreachable...).

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/deepdesc-release"]
 	path = external/deepdesc-release
 	url = https://github.com/etrulls/deepdesc-release.git
+[submodule "external/tfeat"]
+	path = external/tfeat
+	url = https://github.com/vbalnt/tfeat.git
