Imported Caffe for TFeat
Due to weird choices made in Caffe's CMake files, we use our own
fork that properly installs Matlab files and compiles on Fedora
27/28.

The build_all.sh script is also updated to build and install
caffe in our private location.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/tfeat"]
 	path = external/tfeat
 	url = https://github.com/vbalnt/tfeat.git
+[submodule "external/caffe"]
+	path = external/caffe
+	url = https://github.com/rokm/caffe.git
