--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "external/mexopencv"]
 	path = external/mexopencv
-	url = https://github.com/rokm/mexopencv.git
+	url = https://github.com/kyamagu/mexopencv.git
 [submodule "external/opencv"]
 	path = external/opencv
-	url = https://github.com/rokm/opencv
+	url = https://github.com/opencv/opencv
 [submodule "external/opencv_contrib"]
 	path = external/opencv_contrib
-	url = https://github.com/rokm/opencv_contrib
+	url = https://github.com/opencv/opencv_contrib
 [submodule "external/lift"]
 	path = external/lift
 	url = https://github.com/rokm/LIFT/
